--- a/index.html
+++ b/index.html
@@ -15,7 +15,25 @@
 <body>
 
 
-   
+   <div id="side-bar">
+     <div class="toggle-button" id="toggle-button">
+       <span></span>
+       <span></span>
+       <span></span>
+     </div>
+     <ul>
+       <li>Home</li>
+       <li>About</li>
+       <li>Services</li>
+       <li>Contact</li>
+     </ul>
+   </div>
+   <section id="content">
+     <h1> Sidebar is life</h1>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, explicabo neque? Tempora ut excepturi perferendis nihil voluptate. Id distinctio illo inventore illum eligendi maiores reprehenderit? Ratione neque sapiente dolor eius a ipsam eligendi reprehenderit, debitis voluptas nemo itaque quam architecto esse, labore libero atque, sequi hic similique. Aut doloribus vel aliquam, hic ut tempore iusto! Officiis quibusdam, quam perspiciatis a ipsa exercitationem tenetur ab aspernatur numquam aperiam quod. Corporis, ex sunt necessitatibus laborum facilis laboriosam quae iure commodi recusandae explicabo.</p>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, explicabo neque? Tempora ut excepturi perferendis nihil voluptate. Id distinctio illo inventore illum eligendi maiores reprehenderit? Ratione neque sapiente dolor eius a ipsam eligendi reprehenderit, debitis voluptas nemo itaque quam architecto esse, labore libero atque, sequi hic similique. Aut doloribus vel aliquam, hic ut tempore iusto! Officiis quibusdam, quam perspiciatis a ipsa exercitationem tenetur ab aspernatur numquam aperiam quod. Corporis, ex sunt necessitatibus laborum facilis laboriosam quae iure commodi recusandae explicabo.</p>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, explicabo neque? Tempora ut excepturi perferendis nihil voluptate. Id distinctio illo inventore illum eligendi maiores reprehenderit? Ratione neque sapiente dolor eius a ipsam eligendi reprehenderit, debitis voluptas nemo itaque quam architecto esse, labore libero atque, sequi hic similique. Aut doloribus vel aliquam, hic ut tempore iusto! Officiis quibusdam, quam perspiciatis a ipsa exercitationem tenetur ab aspernatur numquam aperiam quod. Corporis, ex sunt necessitatibus laborum facilis laboriosam quae iure commodi recusandae explicabo.</p>
+   </section>
 
 
   <script src="./assets/jquery.min.js" type="text/javascript" ></script>
